--- a/lambdas/rust-workspace/momento_cache_facade/Cargo.toml
+++ b/lambdas/rust-workspace/momento_cache_facade/Cargo.toml
@@ -8,3 +8,8 @@ name = "hello_momento_cache"
 path = "src/bin/hello.rs"
 
 [dependencies]
+colog = "1.3.0"
+dotenv = "0.15.0"
+momento = "0.43.0"
+tokio = { version = "1.40.0", features = ["full"] }
+log = "0.4.22"
