--- a/lambdas/rust-workspace/napi_rs_momento_cache/package.json
+++ b/lambdas/rust-workspace/napi_rs_momento_cache/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "artifacts": "napi artifacts",
     "build": "napi build --platform --release",
+    "build-linux": "napi build --platform --release --target aarch64-unknown-linux-gnu",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "ava",
